modified:   index.html 	modified:   styles.css

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 
 <body>
+    <h1>Tic-Tac-Toe</h1>
 
-    <h1>Tik-Tak-Toe</h1>
     <div class="game-container">
         <div id="setup" class="setup">
-            <h1>Setup Game</h1>
+            <h2>Setup Game</h2>
             <input type="text" id="player1Name" placeholder="Player 1 Name">
             <input type="text" id="player2Name" placeholder="Player 2 Name (Leave blank for AI)">
             <div class="difficulty-selection">
